# parrot-bot

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  database.c  database.h  download.c  download.h  init.sql  init_sql.h.in  main.c  s3.c  s3.h  vector.c  vector.h
.github/: .docker-slim-preserve
.github/workflows/: release.yml
